--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800;900&display=swap');
+/* @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap"); */
 
 :root {
     --header-height: 2rem;
-    --nav-width: 4%;
+    --nav-width: 4.5%;
     --first-color-light: #E9F6FF;
     --white-color: #878787;
+    --body-font: 'Raleway', sans-serif;;
     /* --body-font: 'Poppins', sans-serif; */
-    --body-font: 'Nunito', sans-serif;
+    /* --body-font: 'Nunito', sans-serif; */
     --normal-font-size: 1rem;
     --z-fixed: 100;
-    --primary-color:#027CD4;
-    --light-primary:#E9F6FF;
-    --font-color:#011B2E;
+    --primary-color: #027CD4;
+    --light-primary: #E9F6FF;
+    --font-color: #011B2E;
 }
 
 *,
@@ -24,14 +26,14 @@
 body {
     position: relative;
     margin: var(--header-height) 0 0 0;
-    padding: 0 1rem;
+    padding: 0 0 0 1rem;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     transition: .5s
 }
 
 a {
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 .header {
@@ -78,11 +80,14 @@ a {
     background-color: white;
     padding: .5rem 1rem 0 0;
     transition: .5s;
-    z-index: var(--z-fixed);
+    z-index: 1;
+    top: 42px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+
 }
 
-.nav {
+.leftnav {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -152,6 +157,11 @@ a {
 .height-100 {
     height: 100vh
 }
+@media screen and (max-width: 1024px){
+    :root {
+        --nav-width: 7%;
+    }
+}
 
 @media screen and (min-width: 768px) {
     body {
@@ -190,7 +200,40 @@ a {
     margin-left: 0
 }
 
+/* Below header part  */
 
+.lightBlue_section {
+    /* background-color: var(--light-primary); */
+    background: linear-gradient(180deg, #E9F6FF -13.37%, rgba(253, 254, 255, 0) 95.21%);
+    min-height: 10.5rem;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    z-index: -10;
+}
 
+.below_header{
+    display: flex;
+    flex-direction: column;
+}
 
+.below_header h1 {
+    font-weight: 700;
+    line-height: 42px;
+    padding: 3%;
+}
 
+.nav_item{
+    padding: 0 1%;
+}
+
+.below_header_btn{
+    border-radius: 10px 10px 0 0 !important;
+    background-color: var(--primary-color) !important;
+    color: white;
+}
+
+.nav-item .active{
+    background-color: white !important;
+    color: var(--font-color) !important;
+}
