--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,23 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800;900&display=swap');
-/* @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
 
 :root {
     --header-height: 2rem;
     --nav-width: 4.5%;
     --first-color-light: #E9F6FF;
     --white-color: #878787;
-    --body-font: 'Raleway', sans-serif;;
+    /* --body-font: 'Raleway', sans-serif; */
     /* --body-font: 'Poppins', sans-serif; */
-    /* --body-font: 'Nunito', sans-serif; */
+    --body-font: 'Nunito', sans-serif;
     --normal-font-size: 1rem;
     --z-fixed: 100;
     --primary-color: #027CD4;
     --light-primary: #E9F6FF;
     --font-color: #011B2E;
+    --red-color:#F90808;
+    --green-color:#20C997;
+    --yellow-color:#FFB55E;
 }
 
 *,
@@ -29,7 +32,12 @@ body {
     padding: 0 0 0 1rem;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
-    transition: .5s
+    transition: .5s;
+}
+
+.row{
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 a {
@@ -157,7 +165,8 @@ a {
 .height-100 {
     height: 100vh
 }
-@media screen and (max-width: 1024px){
+
+@media screen and (max-width: 1024px) {
     :root {
         --nav-width: 7%;
     }
@@ -212,7 +221,7 @@ a {
     z-index: -10;
 }
 
-.below_header{
+.below_header {
     display: flex;
     flex-direction: column;
 }
@@ -221,19 +230,85 @@ a {
     font-weight: 700;
     line-height: 42px;
     padding: 3%;
+    font-family:'Raleway', sans-serif; ;
 }
 
-.nav_item{
+.nav_item {
     padding: 0 1%;
 }
 
-.below_header_btn{
+.below_header_btn {
     border-radius: 10px 10px 0 0 !important;
     background-color: var(--primary-color) !important;
     color: white;
 }
 
-.nav-item .active{
+.nav-item .active {
     background-color: white !important;
     color: var(--font-color) !important;
+}
+
+/* Admin dashboad */
+
+.red_text{
+    color: var(--red-color);
+}
+
+.total_absent,.pie_chart,.line_chart{
+    width: 32%;
+}
+
+.graphs,.table_container{
+    margin-right: 2%;
+}
+
+@media screen and (max-width:768px){
+
+    .pie_chart{
+        /* width: 45%; */
+        display: none;
+    }
+
+    .line_chart{
+        /* width: 45%; */
+        display: none;
+    }
+
+    .total_absent{
+        width: 90% !important;
+    }
+    
+}
+
+/* for table */
+
+.teacher_table {
+    width: 100%;
+    border-style: hidden;
+    font-size: 0.8rem;
+    caption-side: top;
+}
+
+.teacher_table td, .teacher_table th {
+    padding-left: 1%;
+}
+
+.teacher_table tr:nth-child(odd) {
+    background-color: #FAFAFA;
+}
+
+.action {
+    color: tomato;
+}
+
+.action:hover {
+    color: maroon;
+}
+
+.teacher_table tr {
+    height: 30px;
+}
+
+.teacher_table tr:hover {
+    background-color: var(--light-primary);
 }
