--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,9 @@
     --primary-color: #027CD4;
     --light-primary: #E9F6FF;
     --font-color: #011B2E;
-    --red-color:#F90808;
-    --green-color:#20C997;
-    --yellow-color:#FFB55E;
+    --red-color: #F90808;
+    --green-color: #20C997;
+    --yellow-color: #FFB55E;
 }
 
 *,
@@ -35,7 +35,7 @@ body {
     transition: .5s;
 }
 
-.row{
+.row {
     margin: 0 !important;
     padding: 0 !important;
 }
@@ -88,7 +88,7 @@ a {
     background-color: white;
     padding: .5rem 1rem 0 0;
     transition: .5s;
-    z-index: 1;
+    /* z-index: 1000; */
     top: 42px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
@@ -166,7 +166,7 @@ a {
     height: 100vh
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
     :root {
         --nav-width: 7%;
     }
@@ -222,7 +222,7 @@ a {
 }
 
 
-.below_header{
+.below_header {
     display: flex;
     flex-direction: column;
 }
@@ -231,7 +231,8 @@ a {
     font-weight: 700;
     line-height: 42px;
     padding: 3%;
-    font-family:'Raleway', sans-serif; ;
+    font-family: 'Raleway', sans-serif;
+    ;
 }
 
 .nav_item {
@@ -245,64 +246,64 @@ a {
 }
 
 
-.nav-item .active{
+.nav-item .active {
     background-color: white !important;
     color: var(--font-color) !important;
 }
 
 /* Admin dashboad */
 
-.red_text{
+.red_text {
     color: var(--red-color);
 }
 
-.total_absent,.pie_chart,.line_chart{
+.total_absent, .pie_chart, .line_chart {
     width: 32%;
 }
 
-.graphs,.table_container{
+.graphs, .table_container {
     margin-right: 2%;
 }
 
-@media screen and (max-width:768px){
+@media screen and (max-width:768px) {
 
-    .pie_chart{
+    .pie_chart {
         /* width: 45%; */
         display: none;
     }
 
-    .line_chart{
+    .line_chart {
         /* width: 45%; */
         display: none;
     }
 
-    .total_absent{
+    .total_absent {
         width: 90% !important;
     }
-    
+
 }
 
-/* for table */
+/* for table in teacher's dashboard*/
 
-.teacher_table {
-    margin-top: 0%;
+._table {
     width: 100%;
     border-style: hidden;
     font-size: 0.8rem;
     caption-side: top;
 }
 
-.addbtn{
+.addbtn {
     margin-top: 2%;
     margin-left: 90%;
 }
 
-.teacher_table td, .teacher_table th {
+
+._table td, ._table th {
     padding-left: 1%;
 }
 
-.teacher_table tr:nth-child(odd) {
-    background-color: #FAFAFA;
+._table tr:nth-child(odd) {
+    background-color: rgb(239, 244, 248);
 }
 
 .action {
@@ -313,56 +314,58 @@ a {
     color: maroon;
 }
 
-.teacher_table tr {
+._table tr {
     height: 30px;
 }
 
-.teacher_table tr:hover {
+._table tr:hover {
     background-color: var(--light-primary);
 }
 
-.container1{
+/* for create page */
+
+.container1 {
     margin-top: 5vh;
     margin-right: 2%;
     padding-top: 2%;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
     /* padding-left: 2%; */
-    
+
 }
 
-.form-control{
-    width:55% !important;
+.form-control {
+    width: 55% !important;
 }
 
-.form_label{
+.form_label {
     width: 65%;
 }
 
-.red_text{
+.red_text {
     color: red;
 }
 
 
 
 option:hover {
-    background-color: yellow  !important;
+    background-color: yellow !important;
 }
 
-.button{
+.button {
     margin-left: 80%;
     margin-top: 4%;
     margin-bottom: 3%;
     padding-bottom: 3%;
-    
-    
+
+
 }
 
-.btn{
+.btn {
     background-color: var(--primary-color) !important;
 
 }
 
-.createstudent h2{
+.createstudent h2 {
     font-size: 2.5vh;
     padding-top: 2%;
     font-weight: 600;
@@ -370,34 +373,34 @@ option:hover {
 
 @media screen and (max-width: 768px) {
 
-    .container1{
+    .container1 {
         font-size: 10px;
     }
 
-    .createstudent h2{
+    .createstudent h2 {
         font-size: 1vh;
         padding-top: 5%;
         font-weight: 600;
     }
 
-    .container1{
+    .container1 {
         margin-top: 3vh;
         margin-right: 0.5%;
         padding-top: 2%;
         box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
         /* padding-left: 2%; */
-        
+
     }
 
-    .cardclass{
+    .cardclass {
         font-size: 1vh;
     }
 
-    .card-body{
+    .card-body {
         font-size: 1%;
     }
 
-   
+
     /* .form-control{
         width:55% ;
     } */
@@ -407,67 +410,67 @@ option:hover {
 
 @media screen and (max-width: 820px) {
 
-    .container1{
+    .container1 {
         font-size: 10px;
     }
 
-   
+
     /* .form-control{
         width:55% ;
     } */
 
-    .createstudent h2{
+    .createstudent h2 {
         font-size: 1vh;
         padding-top: 5%;
         font-weight: 600;
     }
 
-    .container1{
+    .container1 {
         margin-top: 3vh;
         margin-right: 0.5%;
         padding-top: 2%;
         box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
         /* padding-left: 2%; */
-        
+
     }
 }
 
 /*Teacher dashboad */
 
-.cardclass{
+.cardclass {
     width: 98%;
     margin-top: 2%;
 }
 
-.card-icon{
-   
+.card-icon {
+
     color: #20C997;
 }
 
-.bookicon{
+.bookicon {
     padding-left: 40px;
     padding-top: 35px;
 }
 
 
-.takeAttendancebtn{
+.takeAttendancebtn {
     margin-top: 17%;
 }
 
-.card-present{
+.card-present {
     margin-top: 20%;
 }
 
-.card-absent{
+.card-absent {
     margin-top: 20%;
 }
 
-.card-leave{
+.card-leave {
     margin-top: 20%;
 }
 
-.card-batchsem{
-    
+.card-batchsem {
+
     color: var(--primary-color);
 }
 
@@ -475,24 +478,49 @@ option:hover {
     border-left: 3px solid rgb(187, 184, 184);
     height: 60px;
     margin-left: 85%;
-   
-    
-  }
 
-  .presentnum{
-      color: #20C997;
-     
-  }
 
-  .leavenum{
+}
+
+.presentnum {
+    color: #20C997;
+
+}
+
+.leavenum {
     color: yellow;
-  }
+}
 
-  .absentnum{
+.absentnum {
     color: red;
-  }
+}
 
-  .cardclass2{
+.cardclass2 {
     width: 98%;
     margin-top: 4%;
-  }
+}
+
+/* for attendance page */
+
+.below_header h6 {
+    padding-top: 6%;
+}
+
+.present {
+    color: var(--green-color);
+    font-weight: bold;
+}
+
+.absent {
+    color: var(--red-color);
+    font-weight: bold;
+}
+
+.leave {
+    color: var(--yellow-color);
+    font-weight: bold;
+}
+
+.attendance_img {
+    width: 1.5em;
+}
